--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -415,8 +415,8 @@
   "admin.billing.subscriptions.billing_summary.lastInvoice.taxes": "Taxes",
   "admin.billing.subscriptions.billing_summary.lastInvoice.title": "Last Invoice",
   "admin.billing.subscriptions.billing_summary.lastInvoice.total": "Total",
-  "admin.billing.subscriptions.billing_summary.lastInvoice.userCount": " x {users} users",
-  "admin.billing.subscriptions.billing_summary.lastInvoice.userCountPartial": "{users} users",
+  "admin.billing.subscriptions.billing_summary.lastInvoice.seatCount": " x {seats} seats",
+  "admin.billing.subscriptions.billing_summary.lastInvoice.seatCountPartial": "{seats} seats",
   "admin.billing.subscriptions.billing_summary.lastInvoice.viewInvoice": "View Invoice",
   "admin.billing.subscriptions.billing_summary.lastInvoice.whatArePartialCharges": "What are partial charges?",
   "admin.billing.subscriptions.billing_summary.lastInvoice.whatArePartialCharges.message": "Users who have not been enabled for the full duration of the month are charged at a prorated monthly rate.",
@@ -1358,7 +1358,7 @@
   "admin.license.upload-modal.file": "File",
   "admin.license.upload-modal.subtitle": "Upload a license key for Mattermost Enterprise Edition to upgrade this server. ",
   "admin.license.upload-modal.successfulUpgrade": "Successful Upgrade!",
-  "admin.license.upload-modal.successfulUpgradeText": "You have upgraded to the {skuName} plan for {licensedUsersNum, number} users. This is effective from {startsAt} until {expiresAt}. ",
+  "admin.license.upload-modal.successfulUpgradeText": "You have upgraded to the {skuName} plan for {licensedUsersNum, number} seats. This is effective from {startsAt} until {expiresAt}. ",
   "admin.license.upload-modal.title": "Upload a License Key",
   "admin.license.uploadFile": "Upload File",
   "admin.license.warn.renew": "Renew",
@@ -4706,8 +4706,8 @@
   "self_hosted_signup.cta": "Upgrade",
   "self_hosted_signup.disclaimer": "I have read and agree to the <a>Enterprise Edition Subscription Terms</a>",
   "self_hosted_signup.error_invalid_number": "Enter a valid number of seats",
-  "self_hosted_signup.error_max_seats": " license purchase only supports purchases up to {num} users",
-  "self_hosted_signup.error_min_seats": "Your workspace currently has {num} users",
+  "self_hosted_signup.error_max_seats": " license purchase only supports purchases up to {num} seats",
+  "self_hosted_signup.error_min_users": "Your workspace currently has {num} active users",
   "self_hosted_signup.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
   "self_hosted_signup.license_applied": "Your {planName} license has now been applied. {planName} features are now available and ready to use.",
