Fix missing capital in text

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4858,7 +4858,7 @@
   "sidebar_left.add_channel_dropdown.browseChannels": "Browse channels",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "Browse or create channels",
   "sidebar_left.add_channel_dropdown.createCategory": "Create new category",
-  "sidebar_left.add_channel_dropdown.createNewChannel": "Create new Channel",
+  "sidebar_left.add_channel_dropdown.createNewChannel": "Create new channel",
   "sidebar_left.add_channel_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
   "sidebar_left.add_channel_dropdown.invitePeople": "Invite people",
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
