--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4708,7 +4708,7 @@
   "self_hosted_signup.disclaimer": "I have read and agree to the <a>Enterprise Edition Subscription Terms</a>",
   "self_hosted_signup.error_invalid_number": "Enter a valid number of seats",
   "self_hosted_signup.error_max_seats": " license purchase only supports purchases up to {num} seats",
-  "self_hosted_signup.error_min_users": "Your workspace currently has {num} active users",
+  "self_hosted_signup.error_min_seats": "Your workspace currently has {num} users",
   "self_hosted_signup.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
   "self_hosted_signup.license_applied": "Your {planName} license has now been applied. {planName} features are now available and ready to use.",
