--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -4679,7 +4679,7 @@
   "self_hosted_signup.disclaimer": "I have read and agree to the <a>Enterprise Edition Subscription Terms</a>",
   "self_hosted_signup.error_invalid_number": "Enter a valid number of seats",
   "self_hosted_signup.error_max_seats": " licence purchase only supports purchases up to {num} seats",
-  "self_hosted_signup.error_min_users": "Your workspace currently has {num} active users",
+  "self_hosted_signup.error_min_seats": "Your workspace currently has {num} users",
   "self_hosted_signup.failed_export.subtitle": "You will receive an email within 3 days to confirm the approval of your licence. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
   "self_hosted_signup.license_applied": "Your {planName} licence has now been applied. {planName} features are now available and ready to use.",
