--- a/webapp/channels/src/i18n/en_AU.json
+++ b/webapp/channels/src/i18n/en_AU.json
@@ -5650,7 +5650,7 @@
   "work_templates.customize.name_label_channels_playbooks": "Name your channel and playbook",
   "work_templates.customize.private_playbook_license_issue": "Private playbooks requires an Enterprise license.",
   "work_templates.customize.visibility_title": "Who should have access to this?",
-  "work_templates.menu.modal_title": "Start from a template",
+  "work_templates.menu.modal_title": "Create from a template",
   "work_templates.menu.quick_use": "Quick use",
   "work_templates.menu.template_title": "TEMPLATE",
   "work_templates.menu.usecase_boards_count": "{boardsCount, plural, =1 {# board} other {# boards}}",
