--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4306,7 +4306,7 @@
   "onboardingTask.checklist.main_subtitle": "Let's get up and running.",
   "onboardingTask.checklist.start_enterprise_now": "Start your free Enterprise trial now!",
   "onboardingTask.checklist.task_complete_your_profile": "Complete your profile.",
-  "onboardingTask.checklist.task_create_from_work_template": "Create from a template - set up a channel with linked boards and playbooks.",
+  "onboardingTask.checklist.task_create_from_work_template": "Create from a template",
   "onboardingTask.checklist.task_download_mm_apps": "Download the Desktop and Mobile Apps.",
   "onboardingTask.checklist.task_explore_other_tools_in_platform": "Explore other tools in the platform.",
   "onboardingTask.checklist.task_invite_team_members": "Invite team members to the workspace.",
@@ -4854,15 +4854,15 @@
   "shortcuts.team_nav.switcher": "Navigate to a specific team:\tCtrl|Alt|[1-9]",
   "shortcuts.team_nav.switcher.mac": "Navigate to a specific team:\t⌘|⌥|[1-9]",
   "sidebar_left.add_channel_cta_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
-  "sidebar_left.add_channel_dropdown.browseChannels": "Browse Channels",
+  "sidebar_left.add_channel_dropdown.browseChannels": "Browse channels",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "Browse or create channels",
-  "sidebar_left.add_channel_dropdown.createCategory": "Create New Category",
-  "sidebar_left.add_channel_dropdown.createNewChannel": "Create New Channel",
+  "sidebar_left.add_channel_dropdown.createCategory": "Create new category",
+  "sidebar_left.add_channel_dropdown.createNewChannel": "Create new channel",
   "sidebar_left.add_channel_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
-  "sidebar_left.add_channel_dropdown.invitePeople": "Invite People",
+  "sidebar_left.add_channel_dropdown.invitePeople": "Invite people",
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
-  "sidebar_left.add_channel_dropdown.work_template_extra": "Set up a channel with linked boards, and playbooks",
+  "sidebar_left.add_channel_dropdown.work_template_extra": "Link channels, boards, and playbooks together",
   "sidebar_left.addChannelsCta": "Add channels",
   "sidebar_left.channel_filter.filterByUnread": "Filter by unread",
   "sidebar_left.channel_filter.filterUnreadAria": "unreads filter",
@@ -4914,7 +4914,7 @@
   "sidebar.directchannel.you": "{displayname} (you)",
   "sidebar.menu.item.notSelected": "not selected",
   "sidebar.menu.item.selected": "selected",
-  "sidebar.openDirectMessage": "Open a Direct Message",
+  "sidebar.openDirectMessage": "Open a direct message",
   "sidebar.show": "Show",
   "sidebar.sort": "Sort",
   "sidebar.sortedByRecencyLabel": "Recent activity",
@@ -5681,7 +5681,7 @@
   "work_templates.customize.name_label_channels_playbooks": "Name your channel and playbook",
   "work_templates.customize.private_playbook_license_issue": "Private playbooks requires an Enterprise license.",
   "work_templates.customize.visibility_title": "Who should have access to this?",
-  "work_templates.menu.modal_title": "Start from a template",
+  "work_templates.menu.modal_title": "Create from a template",
   "work_templates.menu.quick_use": "Quick use",
   "work_templates.menu.template_title": "TEMPLATE",
   "work_templates.menu.usecase_boards_count": "{boardsCount, plural, =1 {# board} other {# boards}}",
