--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2630,7 +2630,7 @@
   "announcement_bar.warn.email_support": "[Contact support](!{email}).",
   "announcement_bar.warn.no_internet_connection": "Looks like you do not have access to the internet.",
   "announcement_bar.warn.renew_license_contact_sales": "Contact sales",
-  "announcement_bar.warn.renew_license_now": "Renew license now",
+  "announcement_bar.warn.renew_license_now": "Renew now",
   "api.channel.add_guest.added": "{addedUsername} added to the channel as a guest by {username}.",
   "api.channel.add_member.added": "{addedUsername} added to the channel by {username}.",
   "api.channel.delete_channel.archived": "{username} archived the channel.",
@@ -4707,6 +4707,7 @@
   "select_team.icon": "Select Team Icon",
   "select_team.join.icon": "Join Team Icon",
   "select_team.private.icon": "Private Team",
+  "self_hosted_renewal.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved.",
   "self_hosted_signup.air_gapped_content": "It appears that your instance is air-gapped, or it may not be connected to the internet. To purchase a license, please visit",
   "self_hosted_signup.air_gapped_title": "Purchase through the customer portal",
   "self_hosted_signup.close": "Close",
