MM-51786: Sentry crash while installing a blocked plugin
We would return "nil, nil" if a plugin was on the blocklist.
This would cause a nil dereference panic while trying to add
struct fields from manifest to the audit logs.

To avoid it, we return an error explicitly and ignore the
error ids to unnecessarily have it log an error.

https://mattermost.atlassian.net/browse/MM-51786

```release-note
NONE
```

--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -5928,6 +5928,10 @@
     "translation": "We encountered an error updating the app."
   },
   {
+    "id": "app.plugin.blocked.app_error",
+    "translation": "Plugin {{.Id}} cannot be installed since it's already packaged with Mattermost."
+  },
+  {
     "id": "app.plugin.cluster.save_config.app_error",
     "translation": "The plugin configuration in your config.json file must be updated manually when using ReadOnlyConfig with clustering enabled."
   },
