--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4171,7 +4171,7 @@
   "more_channels.prev": "Previous",
   "more_channels.show_archived_channels": "Channel Type: Archived",
   "more_channels.show_public_channels": "Channel Type: Public",
-  "more_channels.title": "Browse Channels",
+  "more_channels.title": "More Channels",
   "more_channels.view": "View",
   "more_direct_channels.directchannel.deactivated": "{displayname} - Deactivated",
   "more_direct_channels.directchannel.you": "{displayname} (you)",
