--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4554,7 +4554,7 @@
   "pricing_modal.btn.tryDays": "Try free for {days} days",
   "pricing_modal.btn.upgrade": "Upgrade",
   "pricing_modal.btn.viewPlans": "View plans",
-  "pricing_modal.contact_us": "<a>Contact us</a>",
+  "pricing_modal.contact_us": "Contact us",
   "pricing_modal.extra_briefing.cloud.free.calls": "Group calls of up to 8 people, 1:1 calls, and screen share",
   "pricing_modal.extra_briefing.enterprise.playBookAnalytics": "Playbook analytics dashboard",
   "pricing_modal.extra_briefing.free.calls": "Voice calls and screen share",
@@ -4562,7 +4562,7 @@
   "pricing_modal.extra_briefing.professional.ssoadLdap": "SSO support with AD/LDAP, Google, O365, OpenID",
   "pricing_modal.extra_briefing.professional.ssoSaml": "SSO with SAML 2.0, including Okta, OneLogin, and ADFS",
   "pricing_modal.interested_self_hosting": "Interested in self-hosting?",
-  "pricing_modal.learn_more": "<a>Learn more</a>",
+  "pricing_modal.learn_more": "Learn more",
   "pricing_modal.lookingForCloudOption": "Looking for a cloud option?",
   "pricing_modal.lookingToSelfHost": "Looking to self-host?",
   "pricing_modal.noitfy_cta.request": "Request admin to upgrade",
