--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2958,28 +2958,28 @@
   "channel_modal.type.private.title": "Private Channel",
   "channel_modal.type.public.description": "Anyone can join",
   "channel_modal.type.public.title": "Public Channel",
-  "channel_notifications.allActivity": "For all activity",
-  "channel_notifications.globalDefault": "Global default ({notifyLevel})",
-  "channel_notifications.ignoreChannelMentions": "Ignore mentions for @channel, @here and @all",
-  "channel_notifications.ignoreChannelMentions.help": "When enabled, @channel, @here and @all will not trigger mentions or mention notifications in this channel.",
-  "channel_notifications.ignoreChannelMentions.off.title": "Off",
-  "channel_notifications.ignoreChannelMentions.on.title": "On",
+  "channel_notifications.alertBanner.description": "All other notification preferences for this channel are disabled",
+  "channel_notifications.alertBanner.title": "This channel is muted",
+  "channel_notifications.autoFollowThreadsDesc": "When enabled, all new replies in this channel will be automatically followed and will appear in your Threads view.",
+  "channel_notifications.autoFollowThreadsTitle": "Follow all threads in this channel",
+  "channel_notifications.checkbox.autoFollowThreadsTitle": "Automatically follow threads in this channel",
+  "channel_notifications.checkbox.sameMobileSettingsDesktop": "Use the same notification settings as desktop",
+  "channel_notifications.checkbox.threadsReplyTitle": "Notify me about replies to threads I’m following",
+  "channel_notifications.default": "(default)",
+  "channel_notifications.desktopNotificationsDesc": "Available on Chrome, Edge, Firefox, and the Mattermost Desktop App.",
+  "channel_notifications.desktopNotificationsTitle": "Desktop Notifications",
+  "channel_notifications.ignoreMentionsDesc": "When enabled, @channel, @here and @all will not trigger mentions or mention notifications in this channel",
+  "channel_notifications.ignoreMentionsTitle": "Ignore mentions for @channel, @here and @all",
   "channel_notifications.levels.all": "All",
-  "channel_notifications.levels.default": "Default",
-  "channel_notifications.levels.mention": "Mention",
-  "channel_notifications.levels.none": "None",
-  "channel_notifications.muteChannel.help": "Muting turns off desktop, email and push notifications for this channel. The channel will not be marked as unread unless you're mentioned.",
-  "channel_notifications.muteChannel.off.title": "Off",
-  "channel_notifications.muteChannel.on.title": "On",
-  "channel_notifications.muteChannel.on.title.collapse": "Mute is enabled. Desktop, email and push notifications will not be sent for this channel.",
-  "channel_notifications.muteChannel.settings": "Mute channel",
-  "channel_notifications.never": "Never",
-  "channel_notifications.onlyMentions": "Only for mentions",
-  "channel_notifications.override": "Selecting an option other than \"Default\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome.",
-  "channel_notifications.overridePush": "Selecting an option other than \"Global default\" will override the global notification settings for mobile push notifications in settings. Push notifications must be enabled by the System Admin.",
-  "channel_notifications.preferences": "Notification Preferences for ",
-  "channel_notifications.push": "Send mobile push notifications",
-  "channel_notifications.sendDesktop": "Send desktop notifications",
+  "channel_notifications.mobileNotificationsDesc": "Notification alerts are pushed to your mobile device when there is activity in Mattermost.",
+  "channel_notifications.mobileNotificationsTitle": "Mobile Notifications",
+  "channel_notifications.muteAndIgnore": "Mute or ignore",
+  "channel_notifications.muteChannelDesc": "Turns off notifications for this channel. You’ll still see badges if you’re mentioned.",
+  "channel_notifications.muteChannelTitle": "Mute channel",
+  "channel_notifications.NotifyMeTitle": "Notify me about…",
+  "channel_notifications.preferences": "Notification Preferences",
+  "channel_notifications.resetToDefault": "Reset to default",
+  "channel_notifications.ThreadsReplyTitle": "Thread reply notifications",
   "channel_select.placeholder": "--- Select a channel ---",
   "channel_switch_modal.deactivated": "Deactivated",
   "channel_toggle_button.private": "Private",
@@ -3493,6 +3493,8 @@
   "general_tab.teamNameRestrictions": "Team Name must be {min} or more characters up to a maximum of {max}. You can add a longer team description.",
   "general_tab.title": "General Settings",
   "general_tab.yes": "Yes",
+  "generic_btn.cancel": "Cancel",
+  "generic_btn.save": "Save",
   "generic_icons.add": "Add Icon",
   "generic_icons.add-mail": "Add Mail Icon",
   "generic_icons.add-reaction": "Add Reaction Icon",
@@ -4660,6 +4662,9 @@
   "rhs_thread.toast.newReplies": "New Replies",
   "save_button.save": "Save",
   "save_button.saving": "Saving",
+  "saveChangesPanel.cancel": "Undo",
+  "saveChangesPanel.message": "You have unsaved changes",
+  "saveChangesPanel.save": "Save",
   "search_bar.files_tab": "Files",
   "search_bar.messages_tab": "Messages",
   "search_bar.search": "Search",
