Address review comments
```release-note
NONE
```

--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -6064,6 +6064,10 @@
     "translation": "Unable to decode base64 signature."
   },
   {
+    "id": "app.plugin.skip_installation.app_error",
+    "translation": "Skipping installation of plugin {{.Id}} since existing version is newer."
+  },
+  {
     "id": "app.plugin.store_bundle.app_error",
     "translation": "Unable to store the plugin to the configured file store."
   },
