--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4192,22 +4192,15 @@
   "modal.manual_status.title_dnd": "Your Status is Set to \"Do Not Disturb\"",
   "modal.manual_status.title_offline": "Your Status is Set to \"Offline\"",
   "modal.manual_status.title_ooo": "Your Status is Set to \"Out of Office\"",
-  "more_channels.channel_purpose": "Channel Information: Membership Indicator: Joined, Member count {memberCount} , Purpose: {channelPurpose}",
-  "more_channels.count": "{count} Results",
-  "more_channels.count_one": "1 Result",
-  "more_channels.count_zero": "0 Results",
   "more_channels.create": "Create New Channel",
-  "more_channels.hide_joined": "Hide Joined",
-  "more_channels.hide_joined_checked": "Hide joined channels checkbox, checked",
-  "more_channels.hide_joined_not_checked": "Hide joined channels checkbox, not checked",
-  "more_channels.joined": "Joined",
-  "more_channels.membership_indicator": "Membership Indicator: Joined",
+  "more_channels.createClick": "Click 'Create New Channel' to make a new one",
+  "more_channels.join": "Join",
+  "more_channels.joining": "Joining...",
   "more_channels.next": "Next",
   "more_channels.noArchived": "No archived channels",
   "more_channels.noMore": "No more channels to join",
   "more_channels.noPublic": "No public channels",
   "more_channels.prev": "Previous",
-  "more_channels.searchError": "Try searching different keywords, checking for typos or adjusting the filters.",
   "more_channels.show_archived_channels": "Channel Type: Archived",
   "more_channels.show_public_channels": "Channel Type: Public",
   "more_channels.title": "More Channels",
@@ -4360,7 +4353,7 @@
   "onboarding_wizard.previous": "Previous",
   "onboarding_wizard.self_hosted_plugins.description": "Choose the tools you work with, and we'll add them to your workspace. Additional set up may be needed later.",
   "onboarding_wizard.self_hosted_plugins.title": "What tools do you use?",
-  "onboarding_wizard.skip": "Skip for now",
+  "onboarding_wizard.skip-button": "Skip",
   "onboarding_wizard.submit_error.generic": "Something went wrong. Please try again.",
   "onboardingTask.checklist.completed_subtitle": "We hope Mattermost is more familiar now.",
   "onboardingTask.checklist.completed_title": "Well done. You’ve completed all of the tasks!",
@@ -4438,6 +4431,7 @@
   "payment_form.no_billing_address": "No billing address added",
   "payment_form.no_credit_card": "No credit card added",
   "payment_form.saved_payment_method": "Saved Payment Method",
+  "payment_form.shipping_address": "Shipping Address",
   "payment_form.zipcode": "Zip/Postal Code",
   "payment.card_number": "Card Number",
   "payment.field_required": "This field is required",
