adding group members to channel initial commit

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4177,6 +4177,7 @@
   "msg_typing.isTyping": "{user} is typing...",
   "multiselect.add": "Add",
   "multiselect.addChannelsPlaceholder": "Search and add channels",
+  "multiselect.addGroupMembers": "Add {number} people",
   "multiselect.addGroupsPlaceholder": "Search and add groups",
   "multiselect.adding": "Adding...",
   "multiselect.addPeopleToGroup": "Add People",
