--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4548,6 +4548,8 @@
   "pricing_modal.briefing.ssoWithGitLab": "SSO with Gitlab",
   "pricing_modal.briefing.storageStarter": "{storage} file storage limit",
   "pricing_modal.briefing.title": "Top features",
+  "pricing_modal.briefing.title_no_limit": "No limits on your team’s usage",
+  "pricing_modal.briefing.title_large_scale": "Large scale collaboration",
   "pricing_modal.briefing.unlimitedPlaybookRuns": "Unlimited playbooks and runs",
   "pricing_modal.briefing.unlimitedWorkspaceTeams": "Unlimited workspace teams",
   "pricing_modal.btn.contactSales": "Contact Sales",
@@ -4581,7 +4583,7 @@
   "pricing_modal.planLabel.mostPopular": "MOST POPULAR",
   "pricing_modal.planSummary.enterprise": "Administration, security, and compliance for large teams",
   "pricing_modal.planSummary.free": "Increased productivity for small teams",
-  "pricing_modal.planSummary.professional": "Scalable solutions for growing teams",
+  "pricing_modal.planSummary.professional": "Scalable solutions {br} for growing teams",
   "pricing_modal.price.freeForever": "Free forever",
   "pricing_modal.questions": "Questions?",
   "pricing_modal.rate.userPerMonth": "USD per user/month {br}<b>(billed annually)</b>",
