--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2852,6 +2852,7 @@
   "channel_header.channelFiles": "Channel files",
   "channel_header.channelHasGuests": "This channel has guests",
   "channel_header.channelMembers": "Members",
+  "channel_header.channelThreads": "All threads",
   "channel_header.closeChannelInfo": "Close Info",
   "channel_header.convert": "Convert to Private Channel",
   "channel_header.delete": "Archive Channel",
@@ -2982,6 +2983,7 @@
   "channel_notifications.sendDesktop": "Send desktop notifications",
   "channel_select.placeholder": "--- Select a channel ---",
   "channel_switch_modal.deactivated": "Deactivated",
+  "channel_threads_rhs.header.title": "All Threads",
   "channel_toggle_button.private": "Private",
   "channel_toggle_button.public": "Public",
   "channelHeader.addToFavorites": "Add to Favorites",
@@ -4646,6 +4648,7 @@
   "rhs_card.message_by": "Message by {avatar} {user}",
   "rhs_comment.comment": "Comment",
   "rhs_header.back.icon": "Back Icon",
+  "rhs_header.backToAllThreads": "Back to all threads",
   "rhs_header.backToFlaggedTooltip": "Back to saved posts",
   "rhs_header.backToPinnedTooltip": "Back to pinned posts",
   "rhs_header.backToResultsTooltip": "Back to search results",
