--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1939,6 +1939,7 @@
   "admin.reload.reloadFail": "Reloading unsuccessful: {error}",
   "admin.reporting.workspace_optimization.access.description": "Web server configuration may be affecting access to your Mattermost workspace.",
   "admin.reporting.workspace_optimization.access.descriptionOk": "Access to your workspace seems available!",
+  "admin.reporting.workspace_optimization.access.site_url.cta": "Configure web server",
   "admin.reporting.workspace_optimization.access.site_url.description": "Your web server settings aren't passing a live URL test which means your workspace may not be accessible to users. We recommend updating your web server settings.",
   "admin.reporting.workspace_optimization.access.site_url.title": "Misconfigured web server",
   "admin.reporting.workspace_optimization.access.title": "Workspace access",
@@ -1947,26 +1948,24 @@
   "admin.reporting.workspace_optimization.chip_warnings": "Warnings: {count}",
   "admin.reporting.workspace_optimization.configuration.description": "You have configuration issues to resolve",
   "admin.reporting.workspace_optimization.configuration.descriptionOk": "You seem to have good configuration for SSL and Session Lengths!",
+  "admin.reporting.workspace_optimization.configuration.session_length.cta": "Configure session length",
   "admin.reporting.workspace_optimization.configuration.session_length.description": "Your session length is set to the default of 30 days. A longer session length provides convenience, and a shorter session provides tighter security. We recommend adjusting this based on your organization's security policies.",
   "admin.reporting.workspace_optimization.configuration.session_length.title": "Session lengths is set to default",
-  "admin.reporting.workspace_optimization.configuration.session_length.cta": "Configure session length",
   "admin.reporting.workspace_optimization.configuration.ssl.description": "We strongly recommend securing your Mattermost workspace by configuring SSL in production environments.",
   "admin.reporting.workspace_optimization.configuration.ssl.title": "Configure SSL to make your server more secure",
-  "admin.reporting.workspace_optimization.configuration.ssl.cta": "Configure web server", "admin.reporting.workspace_optimization.configuration.title": "Configuration",
-  "admin.reporting.workspace_optimization.cta.configureDataRetention": "Try data retention",
-  "admin.reporting.workspace_optimization.cta.configureElasticsearch": "Try Elasticsearch",
-  "admin.reporting.workspace_optimization.cta.configureLDAP": "Try AD/LDAP",
-  "admin.reporting.workspace_optimization.cta.downloadUpdate": "Download update",
+  "admin.reporting.workspace_optimization.configuration.title": "Configuration",
   "admin.reporting.workspace_optimization.cta.learnMore": "Learn more",
   "admin.reporting.workspace_optimization.cta.startTrial": "Start trial",
   "admin.reporting.workspace_optimization.cta.upgradeLicense": "Contact sales",
   "admin.reporting.workspace_optimization.data_privacy.description": "Get better insight and control over your data.",
   "admin.reporting.workspace_optimization.data_privacy.descriptionOk": "You seem to be using data retention and compliance features!",
+  "admin.reporting.workspace_optimization.data_privacy.retention.cta": "Try data retention",
   "admin.reporting.workspace_optimization.data_privacy.retention.description": "Organizations in highly regulated industries require more control and insight with their data. We recommend enabling Data Retention and Compliance features.",
   "admin.reporting.workspace_optimization.data_privacy.retention.title": "Become more data aware",
   "admin.reporting.workspace_optimization.data_privacy.title": "Data privacy",
   "admin.reporting.workspace_optimization.ease_of_management.description": "Make it easier to manage your Mattermost workspace.",
   "admin.reporting.workspace_optimization.ease_of_management.descriptionOk": "Your user authentication setup is appropriate based on your current usage!",
+  "admin.reporting.workspace_optimization.ease_of_management.ldap.cta": "Try AD/LDAP",
   "admin.reporting.workspace_optimization.ease_of_management.ldap.description": "You've reached over 100 users! We recommend setting up AD/LDAP user authentication for easier onboarding as well as automated deactivations and role assignments.",
   "admin.reporting.workspace_optimization.ease_of_management.ldap.title": "AD/LDAP integration recommended",
   "admin.reporting.workspace_optimization.ease_of_management.title": "Ease of management",
@@ -1977,9 +1976,11 @@
   "admin.reporting.workspace_optimization.performance.search.description": "Your server has reached over 500 users and 2 million posts which can result in slow search performance. We recommend enabling Elasticsearch for better performance.",
   "admin.reporting.workspace_optimization.performance.search.title": "Search performance",
   "admin.reporting.workspace_optimization.performance.title": "Performance",
+  "admin.reporting.workspace_optimization.search.cta": "Try Elasticsearch",
   "admin.reporting.workspace_optimization.title": "Workspace Optimization",
   "admin.reporting.workspace_optimization.updates.description": "An update is available.",
   "admin.reporting.workspace_optimization.updates.descriptionOk": "Your workspace is completely up to date!",
+  "admin.reporting.workspace_optimization.updates.server_version.cta": "Download update",
   "admin.reporting.workspace_optimization.updates.server_version.status.title": "{type} version update available.",
   "admin.reporting.workspace_optimization.updates.server_version.update_type.major": "Major",
   "admin.reporting.workspace_optimization.updates.server_version.update_type.minor": "Minor",
