--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4714,6 +4714,9 @@
   "self_hosted_renewal.choose_upgrade": "Upgrade",
   "self_hosted_renewal.finalize_existing": "Renew",
   "self_hosted_renewal.finalize_upgrade": "Complete the purchase",
+  "self_hosted_renewal.renewal_in_progress.title": "Renewal in progress",
+  "self_hosted_renewal.success.title": "You’ve successfully renewed your license!",
+  "self_hosted_renewal.success.subtitle": "The license has been automatically applied to your Mattermost instance. Your updated invoice will be visible in the <a>Billing section</a> of the system console.",
   "self_hosted_renewal.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved.",
   "self_hosted_signup.air_gapped_content": "It appears that your instance is air-gapped, or it may not be connected to the internet. To purchase a license, please visit",
   "self_hosted_signup.air_gapped_title": "Purchase through the customer portal",
@@ -4723,6 +4726,7 @@
   "self_hosted_signup.disclaimer": "I have read and agree to the <a>Enterprise Edition Subscription Terms</a>",
   "self_hosted_signup.error_invalid_number": "Enter a valid number of seats",
   "self_hosted_signup.error_max_seats": " license purchase only supports purchases up to {num} seats",
+  "self_hosted_signup.error_min_purchase": "Must purchase at least {seats} seats",
   "self_hosted_signup.error_min_seats": "Your workspace currently has {num} users",
   "self_hosted_signup.failed_export.subtitle": "We will check things on our side and get back to you within 3 days once your license is approved. In the meantime, please feel free to continue using the free version of our product.",
   "self_hosted_signup.failed_export.title": "Your transaction is being reviewed",
