--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2893,6 +2893,7 @@
   "channel_info_rhs.menu.members": "Members",
   "channel_info_rhs.menu.notification_preferences": "Notification Preferences",
   "channel_info_rhs.menu.pinned": "Pinned Messages",
+  "channel_info_rhs.menu.threads": "Threads",
   "channel_info_rhs.top_buttons.add_people": "Add People",
   "channel_info_rhs.top_buttons.copied": "Copied",
   "channel_info_rhs.top_buttons.copy": "Copy Link",
@@ -2984,6 +2985,13 @@
   "channel_select.placeholder": "--- Select a channel ---",
   "channel_switch_modal.deactivated": "Deactivated",
   "channel_threads_rhs.header.title": "All Threads",
+  "channel_threads.filters.all": "All",
+  "channel_threads.filters.createdByMe": "Created by me",
+  "channel_threads.filters.following": "Following",
+  "channel_threads.noResults.all": "There are no threads in this channel.",
+  "channel_threads.noResults.created": "You don’t have any threads that you created in this channel.",
+  "channel_threads.noResults.following": "You don’t follow any threads in this channel.",
+  "channel_threads.noResults.title": "No threads here",
   "channel_toggle_button.private": "Private",
   "channel_toggle_button.public": "Public",
   "channelHeader.addToFavorites": "Add to Favorites",
